# binsmooth

./: .travis.yml  DEVELOPMENT.md  LICENSE  README.md  binsmooth.py  lognorm2.py  pre_push.sh  pyproject.toml  requirements.txt  requirements_build.txt  setup.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
examples/: income.py
tests/: test_bounds.py  test_inputs.py
