[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "binsmooth"
author = "Stephen Tierney"
author-email = "sjtrny@gmail.com"
home-page = "http://github.com/sjtrny/binsmooth"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires-python = ">=3.9"
requires = [
    "numdifftools == 0.9.41",
    "numpy >= 1.25.2",
    "scipy >= 1.11.2",
    "splines==0.3.0"
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
